--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,5 +1,5 @@
 {
-    "backUrl" : "http://192.168.0.17:5000",
+    "backUrl" : "http://localhost:5000",
     "getQuotes": "/crm-api/quotes",
     "putQuote": "/crm-api/quotes/"
 }
