--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,8 +1,9 @@
 {
     "url": {
-        "backUrl": "http://192.168.137.1:5000/",
+        "backUrl": "http://localhost:8092/",
+        "loginUrl": "http://localhost:8080/",
         "putQuotePath": "crm-api/quotes",
         "getClientsPath" : "crm-api/clients",
-        "getProductsPath" : "crm-api/products"
-}
+        "getProductsPath" : "product-management/products"
+    }
 }
