--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,8 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "baseHref" : "/quoting-sales/",
+            "deployUrl": "/quoting-sales/",
             "outputPath": "dist/certi4",
             "index": "src/index.html",
             "main": "src/main.ts",
